[gd_scene load_steps=27 format=2]

[ext_resource path="res://script/background.gd" type="Script" id=1]
[ext_resource path="res://assets/Ship/Left/Boat Left1.png" type="Texture" id=2]
[ext_resource path="res://assets/[8] Wood/[1] Normal.png" type="Texture" id=3]
[ext_resource path="res://assets/[8] Wood/[3] Hover.png" type="Texture" id=4]
[ext_resource path="res://assets/[8] Wood/[2] Clicked.png" type="Texture" id=5]
[ext_resource path="res://assets/Ship/Left/Boat Left2.png" type="Texture" id=6]
[ext_resource path="res://assets/Background/sea.png" type="Texture" id=7]
[ext_resource path="res://assets/Background/sky.png" type="Texture" id=8]
[ext_resource path="res://assets/Ship/Left/Boat Left3.png" type="Texture" id=9]
[ext_resource path="res://assets/treasure/treasure (animate)/treasure4.png" type="Texture" id=10]
[ext_resource path="res://assets/treasure/treasure (animate)/treasure1.png" type="Texture" id=11]
[ext_resource path="res://assets/treasure/treasure (animate)/treasure2.png" type="Texture" id=12]
[ext_resource path="res://assets/treasure/treasure (animate)/treasure3.png" type="Texture" id=13]
[ext_resource path="res://script/Menu.gd" type="Script" id=14]
[ext_resource path="res://assets/button-click.mp3" type="AudioStream" id=15]

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Theme" id=4]

[sub_resource type="DynamicFontData" id=14]
antialiased = false
hinting = 0
font_path = "res://assets/Daydream.ttf"

[sub_resource type="DynamicFont" id=6]
size = 60
outline_size = 10
font_data = SubResource( 14 )

[sub_resource type="Theme" id=9]

[sub_resource type="DynamicFontData" id=15]
antialiased = false
override_oversampling = 2.0
font_path = "res://assets/Daydream.ttf"

[sub_resource type="DynamicFont" id=11]
size = 20
outline_size = 4
outline_color = Color( 0.286275, 0.101961, 0.0235294, 1 )
font_data = SubResource( 15 )

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/Daydream.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[sub_resource type="Theme" id=3]
resource_local_to_scene = true
resource_name = "okjil"
default_font = SubResource( 2 )
/fonts/gvfusdfbn = SubResource( 2 )

[node name="Menu" type="Node2D"]
script = ExtResource( 14 )

[node name="background" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Sky" type="Sprite" parent="background"]
position = Vector2( 1396, -234 )
scale = Vector2( 3.06757, 3.06757 )
texture = ExtResource( 8 )
offset = Vector2( 104.643, 129.093 )

[node name="Sky5" type="Sprite" parent="background/Sky"]
position = Vector2( 1142.27, 0.651978 )
texture = ExtResource( 8 )
offset = Vector2( 104.643, 129.093 )

[node name="Sky2" type="Sprite" parent="background/Sky"]
position = Vector2( -368.044, -6.10352e-05 )
texture = ExtResource( 8 )
offset = Vector2( 104.643, 129.093 )

[node name="Sky3" type="Sprite" parent="background/Sky"]
position = Vector2( 759.56, 0.0001297 )
texture = ExtResource( 8 )
offset = Vector2( 104.643, 129.093 )

[node name="Sky4" type="Sprite" parent="background/Sky"]
position = Vector2( 380.106, 6.10352e-05 )
texture = ExtResource( 8 )
offset = Vector2( 104.643, 129.093 )

[node name="Sea" type="Sprite" parent="."]
position = Vector2( 508, 476 )
scale = Vector2( 2.71094, 2.71094 )
texture = ExtResource( 7 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 856, 128 )
scale = Vector2( 8.85844, 8.85844 )
frames = SubResource( 13 )
frame = 2
playing = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 248, 352 )
scale = Vector2( 9.35495, 9.35495 )
frames = SubResource( 12 )
playing = true
flip_h = true

[node name="Label" type="Label" parent="."]
margin_left = 553.0
margin_top = 203.0
margin_right = 994.0
margin_bottom = 366.0
theme = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Steve 
a   w   a   y"
align = 1

[node name="Play" type="TextureButton" parent="."]
margin_left = 556.0
margin_top = 386.0
margin_right = 754.0
margin_bottom = 458.0
theme = SubResource( 9 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
expand = true
__meta__ = {
"_editor_description_": "
"
}

[node name="Label2" type="Label" parent="Play"]
margin_left = 59.0
margin_top = 16.0
margin_right = 158.0
margin_bottom = 49.5
rect_pivot_offset = Vector2( -586, -109 )
custom_fonts/font = SubResource( 11 )
text = "PLAY"

[node name="Tutorial" type="TextureButton" parent="."]
margin_left = 796.0
margin_top = 386.0
margin_right = 994.0
margin_bottom = 458.0
theme = SubResource( 3 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
expand = true
__meta__ = {
"_editor_description_": "
"
}

[node name="Label3" type="Label" parent="Tutorial"]
margin_left = 19.0
margin_top = 17.0
margin_right = 222.0
margin_bottom = 50.5
custom_fonts/font = SubResource( 11 )
text = "TUTORIAL"

[node name="button" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="Developers" type="TextureButton" parent="."]
margin_left = 555.0
margin_top = 473.0
margin_right = 753.0
margin_bottom = 545.0
theme = SubResource( 9 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
expand = true
__meta__ = {
"_editor_description_": "
"
}

[node name="Label2" type="Label" parent="Developers"]
margin_left = 18.0
margin_top = 14.0
margin_right = 182.0
margin_bottom = 47.5
rect_pivot_offset = Vector2( -586, -109 )
custom_fonts/font = SubResource( 11 )
text = "Dev Team"

[node name="code" type="TextureButton" parent="."]
margin_left = 795.0
margin_top = 473.0
margin_right = 993.0
margin_bottom = 545.0
theme = SubResource( 3 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
expand = true
__meta__ = {
"_editor_description_": "
"
}

[node name="Label3" type="Label" parent="code"]
margin_left = 56.0
margin_top = 16.0
margin_right = 259.0
margin_bottom = 49.5
custom_fonts/font = SubResource( 11 )
text = "CODE"

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="Developers" to="." method="_on_Developers_pressed"]
[connection signal="pressed" from="code" to="." method="_on_code_pressed"]
